# ChangeLog for media-libs/flac
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/flac/ChangeLog,v 1.194 2014/12/24 17:08:42 radhermit Exp $

  24 Dec 2014; Tim Harder <radhermit@gentoo.org> -flac-1.2.1-r3.ebuild,
  -flac-1.2.1-r4.ebuild, -flac-1.2.1-r5.ebuild, -flac-1.3.0.ebuild,
  -flac-1.3.0-r1.ebuild, -files/flac-1.2.1-asm.patch,
  -files/flac-1.2.1-asneeded.patch, -files/flac-1.2.1-cflags.patch,
  -files/flac-1.2.1-dontbuild-examples.patch,
  -files/flac-1.2.1-dontbuild-tests.patch,
  -files/flac-1.2.1-gcc-4.3-includes.patch, -files/flac-1.2.1-ogg-m4.patch,
  -files/flac-1.3.0-metaflac_strcat.patch:
  Remove old.

  24 Dec 2014; Agostino Sarubbo <ago@gentoo.org> flac-1.3.1-r1.ebuild:
  Stable for ppc64, wrt bug #530288

  23 Dec 2014; Agostino Sarubbo <ago@gentoo.org> flac-1.3.1-r1.ebuild:
  Stable for alpha, wrt bug #530288

  12 Dec 2014; Agostino Sarubbo <ago@gentoo.org> flac-1.3.1-r1.ebuild:
  Stable for x86, wrt bug #530288

  12 Dec 2014; Agostino Sarubbo <ago@gentoo.org> flac-1.3.1-r1.ebuild:
  Stable for amd64, wrt bug #530288

  06 Dec 2014; Agostino Sarubbo <ago@gentoo.org> flac-1.3.1-r1.ebuild:
  Stable for ia64, wrt bug #530288

  03 Dec 2014; Agostino Sarubbo <ago@gentoo.org> flac-1.3.1-r1.ebuild:
  Stable for ppc, wrt bug #530288

  03 Dec 2014; Tim Harder <radhermit@gentoo.org> flac-1.3.1-r1.ebuild:
  Apply cross-compile fix (bug #521446 by James Le Cuirot).

  02 Dec 2014; Markus Meier <maekke@gentoo.org> flac-1.3.1-r1.ebuild:
  arm stable, bug #530288

  01 Dec 2014; Agostino Sarubbo <ago@gentoo.org> flac-1.3.1-r1.ebuild:
  Stable for sparc, wrt bug #530288

  29 Nov 2014; Christoph Junghans <ottxor@gentoo.org> flac-1.3.1-r1.ebuild:
  added prefix keywords

  29 Nov 2014; Jeroen Roovers <jer@gentoo.org> flac-1.3.1-r1.ebuild:
  Stable for HPPA (bug #530288).

*flac-1.3.1-r1 (28 Nov 2014)

  28 Nov 2014; Tim Harder <radhermit@gentoo.org> -flac-1.3.1.ebuild,