@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/flac/flac-1.3.1-r1.ebuild,v 1.12 2014/12/24 14:45:27 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/flac/flac-1.3.1-r1.ebuild,v 1.13 2015/01/29 17:30:46 mgorny Exp $
 
 EAPI=5
 AUTOTOOLS_AUTORECONF=1
@@ -15,7 +15,7 @@ SRC_URI="http://downloads.xiph.org/releases/${PN}/${P}.tar.xz"
 LICENSE="BSD FDL-1.2 GPL-2 LGPL-2.1"
 SLOT="0"
 KEYWORDS="alpha amd64 arm hppa ia64 ~mips ppc ppc64 ~sh sparc x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris"
-IUSE="altivec +cxx debug ogg sse static-libs"
+IUSE="altivec +cxx debug ogg cpu_flags_x86_sse static-libs"
 
 RDEPEND="ogg? ( >=media-libs/libogg-1.3.0[${MULTILIB_USEDEP}] )
 	abi_x86_32? (
@@ -42,7 +42,7 @@ src_prepare() {
 src_configure() {
 	local myeconfargs=(
 		$(use_enable debug)
-		$(use_enable sse)
+		$(use_enable cpu_flags_x86_sse sse)
 		$(use_enable altivec)
 		--disable-doxygen-docs
 		--disable-xmms-plugin
