@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/flac
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/flac/ChangeLog,v 1.194 2014/12/24 17:08:42 radhermit Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/flac/ChangeLog,v 1.195 2015/01/29 17:30:46 mgorny Exp $
+
+  29 Jan 2015; Michał Górny <mgorny@gentoo.org> flac-1.3.1-r1.ebuild:
+  Switch to CPU_FLAGS_X86.
 
   24 Dec 2014; Tim Harder <radhermit@gentoo.org> -flac-1.2.1-r3.ebuild,
   -flac-1.2.1-r4.ebuild, -flac-1.2.1-r5.ebuild, -flac-1.3.0.ebuild,
